# MacBCPL

./: .gitignore  Cargo.toml  README.md
docs/: README.md  cocoa_objects.md  crash_handling.md  fork_notes.md  macos_build.md  memory_model.md  test_matrix.md  the_new_bcpl_programming_language.md
examples/: bcpl-ide.bcl  cocoa-alert.bcl  cocoa-collections.bcl  cocoa-demos.md  cocoa-geometry.bcl  cocoa-sysinfo.bcl  cocoa-window.bcl
new-asm/: Cargo.toml
new-asm/src/: lib.rs
src/newbcpl-driver/src/: main.rs
src/newbcpl-ir/: Cargo.toml
src/newbcpl-ir/src/: ir.rs  lib.rs  lower.rs  print.rs
src/newbcpl-lexer/src/: lib.rs
src/newbcpl-llvm/: Cargo.toml
src/newbcpl-llvm/src/: emit.rs  lib.rs
src/newbcpl-parser/src/: ast.rs  lib.rs  parser.rs
src/newbcpl-runtime/: Cargo.toml
src/newbcpl-runtime/src/: audio.rs  brk.rs  builtins.rs  crash.rs  gc.rs  heap.rs  igui_mac.rs  lib.rs  objc.rs
src/newbcpl-sema/data/: cocoa-selectors.json
src/newbcpl-sema/src/: cocoadb.rs  layout.rs  lib.rs
tests/newbcpl-tests/: Cargo.toml
tests/newbcpl-tests/tests/: aot.rs  arena.rs  asm_probes.rs  lists.rs  matrix_tier4.rs  matrix_tier6.rs  objc.rs  strings.rs  user_guide.rs
