[package]
name = "newbcpl-runtime"
version = "0.1.0"
edition = "2024"

# `staticlib` produces `libnewbcpl_runtime.a` — a self-contained archive (the
# BCPL runtime: builtins, heap/arena, objc bridge, crash handler) that AOT
# executables link against. `rlib` keeps it usable as a normal dependency for
# the JIT driver and tests.
[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
serde_json = "1"

# MacBCPL is a macOS arm64 FORK — Windows compatibility is intentionally
# dropped (no SEH, no Direct2D, no windows crate). POSIX `libc` backs the
# signal-safe crash handler (crash.rs, ported from MacModula2), the
# objc bridge's dlopen/dlsym, and BRK's backtrace.
libc = "0.2"

# Dropped vs upstream NewBCPL: `newaudio-core`/`newaudio-abc` (external,
# not part of the port — audio.rs is a no-op stub) and `bcpl-wingui` +
# the `windows`/`windows-numerics` crates (Windows GUI / Win32; replaced
# by the Cocoa bridge in objc.rs).
